[package]
name = "pressure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
mysql = "24.0"
threadpool = "1.8"
crossbeam = "0.8"
crossbeam-channel = "0.5"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4.0"
tokio = { version = "1.5", features = ["time", "rt", "net", "sync", "rt-multi-thread"]}